Implemented pipeline run functionality. Added missing common-performance elements.